# speech-stack-benchmark

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: cpu.yaml  gpu.yaml  smoke.yaml  streaming.yaml  streaming_diart_whisperlive.yaml  streaming_diart_whisperlive_segmentation3.yaml  streaming_diart_whisperlive_tuning.yaml  streaming_smoke.yaml
configs/datasets/: synthetic.yaml
configs/models/: asr_dummy.yaml  asr_faster_whisper_large_v3.yaml  asr_faster_whisper_large_v3_turbo.yaml  asr_faster_whisper_medium.yaml  asr_faster_whisper_medium_int8_cpu.yaml  asr_faster_whisper_small_int8_cpu.yaml  asr_voxtral_mini_vllm.yaml  asr_whisper_cpp_large_v3_turbo_q5.yaml  asr_whisper_cpp_small_q5.yaml  diar_dummy.yaml  diar_nemo_sortformer.yaml  diar_pyannote_31.yaml  diar_pyannote_31_cpu.yaml  diar_pyannote_community1.yaml  diar_sherpa_onnx.yaml  stream_diart_whisper.yaml  stream_dummy.yaml  stream_voxtral_realtime.yaml  stream_window_medium_pyannote31.yaml  stream_window_turbo_pyannote31.yaml  stream_window_turbo_pyannote31_sliding.yaml
docs/: benchmark_summary_batch_streaming.md  benchmark_summary_google_docs.txt  datasets.md  licensing.md  methodology.md  methodology_streaming.md  model_shortlist.md  results.md
scripts/: _bootstrap.py  analyze_streaming_run.py  check_mdc_access.py  check_streaming_env.py  diagnose_mdc.py  diagnose_reference_silence.py  download_models.py  export_run.py  generate_report.py  generate_streaming_report.py  prepare_datasets.py  run_benchmark.py  run_cpu_benchmark.sh  run_diart_whisperlive.sh  run_gpu_benchmark.sh  run_smoke_test.sh  run_streaming_benchmark.py  run_streaming_smoke.sh  run_streaming_tuning_smoke.sh  run_voxtral_server.sh  run_whisperlive_server.py  setup_diart.sh  setup_linux_gpu.sh  setup_macos.sh  setup_voxtral.sh  setup_whisperlive.sh  validate_gpu.py
src/speech_benchmark/: __init__.py  audio.py  config.py  schemas.py
src/speech_benchmark/asr/: __init__.py  base.py  dummy.py  faster_whisper_adapter.py  voxtral_adapter.py  whisper_cpp_adapter.py
src/speech_benchmark/benchmark/: __init__.py  environment.py  resources.py  run_context.py  runner.py  streaming.py
src/speech_benchmark/datasets/: __init__.py  sources.py  synthetic.py
src/speech_benchmark/diarization/: __init__.py  base.py  dummy.py  nemo_sortformer_adapter.py  pyannote_adapter.py  sherpa_onnx_adapter.py
tests/: conftest.py  test_audio.py  test_combined_metrics.py  test_datasets.py  test_export.py  test_fusion.py  test_metrics.py  test_runner_e2e.py  test_schemas.py  test_streaming.py
(+28 files in other folders)
